# rust-mcp-cli-starter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  cargo-generate.toml  config.toml.example  justfile  pre-script.rhai
.github/: dependabot.yml
.github/workflows/: pull-request-validation.yml
crates/myapp-cli/: Cargo.toml  README.md
crates/myapp-cli/src/: main.rs  output.rs
crates/myapp-cli/src/commands/: completions.rs  item.rs  man.rs  mod.rs  status.rs
crates/myapp-cli/src/utils/: client.rs
crates/myapp-cli/tests/: cli.rs
crates/myapp-core/: Cargo.toml  README.md
crates/myapp-core/src/: api.rs  client.rs  config.rs  endpoints.rs  env.rs  error.rs  lib.rs  models.rs  pagination.rs  secret.rs
crates/myapp-core/tests/: endpoints.rs
crates/myapp-mcp/: Cargo.toml  README.md
crates/myapp-mcp/src/: config.rs  http.rs  main.rs  shared.rs  stdio.rs
crates/myapp-mcp/src/commands/: completions.rs  man.rs  mod.rs
crates/myapp-mcp/src/middleware/: cors.rs  mod.rs  oauth.rs  static_bearer_auth.rs
crates/myapp-mcp/src/oauth/: consent.html  endpoints.rs  mod.rs  model.rs  pkce.rs  store.rs  tests.rs
crates/myapp-mcp/src/tools/: handler.rs  instructions.md  item_tools.rs  mod.rs  params.rs  schema.rs  server.rs  types.rs
crates/myapp-mcp/tests/: cli.rs
deploy/: compose.yaml
