[package]
name = "myapp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Async Rust client library for the MYAPP API"
readme = "README.md"

[features]
# Derive `schemars::JsonSchema` on the public API models so MCP/rmcp consumers
# can advertise tool output schemas. Off by default to keep the core client free
# of the schemars dependency.
schema = ["dep:schemars"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
toml.workspace = true
schemars = { workspace = true, optional = true }

[dev-dependencies]
wiremock = "0.6.5"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.27.0"

[lints]
workspace = true
